--- a/singolo1.css
+++ b/singolo1.css
@@ -1,228 +1,242 @@
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 html,
 body {
-    font-family: 'latoregular';
+	font-family: "latoregular";
 }
 
 body > * {
-    width: 100%;
+	width: 100%;
 }
 
 .block {
-    margin: 0 auto;
-    width: 940px;
+	width: 940px;
+	margin: 0 auto;
 }
 
 .head {
-    padding-top: 26px;
-    background-color: #2d303a;
-    height: 63px;
-    border-bottom: 6px solid #323746;
+	height: 62px;
+	padding-top: 26.5px;
+	background-color: #2d303a;
+	border-bottom: 6px solid #323746;
 }
 
 .head-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .head-content-logo {
-    display: flex;
-    font-family: 'latobold';
+	display: flex;
+	font-family: "latobold";
 }
 
 .head-content-logo h1 {
-    color: white;
-    letter-spacing: -0.58px;
-    font-size: 25px;
+	font-size: 25px;
+	letter-spacing: -0.5px;
+	color: white;
 }
 
 .head-content-logo span {
-    color: #f06c64;
-    font-size: 25px;
+	font-size: 25px;
+	color: #f06c64;
 }
 
 .head-content-menu {
-    padding-top: 8px;
-    letter-spacing: -0.15px;
+	padding-top: 7px;
 }
 
 .head-content-menu ul li {
-    display: inline-block;
-    list-style: none;
-    color: white;
-    font-family: 'latobold';
-    font-size: 12px;
-    letter-spacing: -0.29px
+	display: inline-block;
+	font-family: "latobold";
+	font-size: 12px;
+	letter-spacing: -0.29px;
+	color: white;
+	list-style: none;
+	cursor: pointer;
+}
+
+.head-content-menu ul li:hover {
+	text-decoration: underline;
 }
 
 .head-content-menu ul li:not(:last-child) {
-    margin-right: 23.79px;
+	margin-right: 23.7px;
 }
 
 .head-content-menu ul li:not(:first-child)::before {
-    content: "·";
-    color: #494e62;
-    position: relative;
-    left: -14px;
+	position: relative;
+	left: -14px;
+	content: "·";
+	color: #494e62;
 }
 
 .head-content-menu-selected {
-    color: #f06c64 !important;
+	color: #f06c64 !important;
 }
 
 .slider {
-    height: 541px;
-    padding-top: 53px;
-    background-color: #f06c64;
-    border-bottom: 6px solid #ea676b;
+	height: 541px;
+	padding-top: 53px;
+	background-color: #f06c64;
+	border-bottom: 6px solid #ea676b;
 }
 
 .slider-content {
-    display: grid;
-    grid-template-columns: 18px auto 18px;
+	display: grid;
+	grid-template-columns: 18px auto 18px;
 }
 
 .slider-button {
-    padding-top: 228px;
-    padding-left: 2px;
+	padding-top: 228px;
+	padding-left: 2px;
+	cursor: pointer;
 }
 
 .slider-img {
-    display: flex;
+	display: flex;
 }
 
 .slider-forward img {
-    transform: rotate(180deg);
+	transform: rotate(180deg);
 }
 
 .slider-img-vertical,
 .slider-img-horizontal {
-    margin-left: 54px;
-    display: flex;
+	display: flex;
+	margin-left: 54px;
 }
 
 .slider-img-vertical-phone,
 .slider-img-horizontal-phone {
-    height: 458px;
-    z-index: 2;
+	height: 458px;
+	z-index: 2;
 }
 
 .slider-img-vertical-shadow,
 .slider-img-horizontal-shadow {
-    position: absolute;
-    z-index: 1;
+	position: absolute;
+	z-index: 1;
 }
 
 .slider-img-vertical-background,
 .slider-img-horizontal-background {
-    height: 339px;
-    position: absolute;
-    margin-top: 62px;
-    margin-left: 11px;
-    z-index: 3;
+	position: absolute;
+	z-index: 3;
+	height: 339px;
+	margin-top: 62px;
+	margin-left: 11px;
 }
 
 .slider-img-horizontal {
-    margin-top: -1px;
-    transform: translateX(165px) rotate(90deg);
+	margin-top: -1px;
+	transform: translateX(165px) rotate(90deg);
 }
 
 .slider-img-horizontal-shadow {
-    transform: translateY(-26px) scale(1, -1);
+	transform: translateY(-26px) scale(1, -1);
 }
 
 .services {
-    background-color: #f2f2f2;
-    padding-top: 55px;
+	padding-top: 55px;
+	background-color: #f2f2f2;
+	border-bottom: 6px solid #ffffff;
 }
 
 .services-content p {
-    color: #767e9e;
-    font-family: 'latoregular';
+	font-family: "latoregular";
+	color: #767e9e;
 }
 
 .services-content > h2 {
-    font-size: 30px;
-    margin-bottom: 17px;
-    color: #666d89;
-    font-family: 'latoblack';
-    letter-spacing: 0.04px;
+	margin-left: 0.2px;
+	margin-bottom: 15px;
+	font-family: "latoblack";
+	font-size: 30px;
+	letter-spacing: -0.05px;
+	color: #666d89;
 }
 
 .services-content > p {
-    font-size: 18px;
-    font-family: 'latolight';
-    margin-bottom: 45px;
-    letter-spacing: -0.049px;
-    line-height: 29px;
+	margin: 0 0 46px 0.3px;
+	font-family: "latolight";
+	font-size: 18px;
+	letter-spacing: -0.26px;
+	text-align: justify;
+	line-height: 29px;
 }
 
 .services-list {
-    display: grid;
-    grid-template-columns: repeat(3, 300px);
-    grid-column-gap: 20px;
-    grid-row-gap: 37px;
-    list-style: none;
-    padding-bottom: 67px;
-    border-bottom: 6px solid #ffffff;
+	display: grid;
+	grid-template-columns: repeat(3, 299px);
+	grid-column-gap: 20px;
+	grid-row-gap: 36px;
+	padding-bottom: 67px;
+	list-style: none;
 }
 
 .services-list li {
-    display: flex;
-    height: 87px;
+	display: flex;
+	height: 87px;
 }
 
 .services-list li::before {
-    content: '';
-    background-size: 60.5px;
-    width: 60.5px;
-    height: 60.5px;
-    margin-left: -1px;
+	content: "";
+	width: 60px;
+	height: 59px;
+	margin-left: 1.5px;
+	margin-top: 2px;
 }
 
 .services-list li:nth-child(1)::before {
-    background: url("assets/pen.svg");
+	background: url("assets/pen.png");
 }
 
 .services-list li:nth-child(2)::before {
-    background: url("assets/lamp.svg");
+	background: url("assets/lamp.png");
 }
 
 .services-list li:nth-child(3)::before {
-    background: url("assets/heart.svg");
+	margin-left: 2.5px;
+	margin-right: -1px;
+	background: url("assets/heart.png");
 }
 
 .services-list li:nth-child(4)::before {
-    background: url("assets/phone.svg");
+	background: url("assets/phone-serv.png");
 }
 
 .services-list li:nth-child(5)::before {
-    background: url("assets/bumble.svg");
+	background: url("assets/bumble.png");
 }
 
 .services-list li:nth-child(6)::before {
-    background: url("assets/star.svg");
+	margin-left: 2.5px;
+	margin-right: -1px;
+	background: url("assets/star.png");
 }
 
 .services-list-text {
-    width: 218px;
-    margin-left: 20px;
+	width: 220px;
+	margin-left: 20px;
 }
 
 .services-list-text h3 {
-    color: #666d89;
-    margin-bottom: 11px;
-    font-size: 18px;
-    line-height: 17px;
-    letter-spacing: 0.3px;
+	margin-bottom: 11px;
+	font-size: 18px;
+	line-height: 17px;
+	letter-spacing: 0.4px;
+	color: #666d89;
 }
 
 .services-list-text p {
-    font-size: 12px;
-    line-height: 20px;
+	width: 219px;
+	font-size: 12px;
+	line-height: 21px;
+	text-align: justify;
+	letter-spacing: -0.1px;
 }
