--- a/singolo2.css
+++ b/singolo2.css
@@ -301,6 +301,7 @@ h2 {
 
 .about-us-wrapper {
 	background-color: #f2f2f2;
+	border-bottom: 6px solid #ffffff;
 }
 
 .about-us h2 {
@@ -325,6 +326,7 @@ h2 {
 	display: grid;
 	grid-template-columns: 300px 302px 300px;
 	grid-column-gap: 19px;
+	padding-bottom: 62px;
 }
 
 .about-us-people__name {
@@ -333,4 +335,55 @@ h2 {
 	color: #666d89;
 	padding-top: 14px;
 	padding-top: 8px;
+}
+
+.about-us-people__note p {
+	font-size: 12px;
+    padding-top: 6px;
+    text-align: justify;
+    letter-spacing: -0.199px;
+    line-height: 20px;
+    word-spacing: 0.4px;
+}
+
+.about-us-people__social > img {
+	padding: 5px;
+	border-radius: 100%;
+	border: 1px solid #666d89;
+}
+
+.about-us-people__social {
+	margin-top: 26px;
+}
+
+.about-us-people:not(:last-child) .about-us-people__social {
+	margin-left: 1px;
+}
+
+.about-us-people__social > span {
+	margin-right: 4px;
+    border-radius: 100%;
+    border: 1px solid #666d89;
+    width: 30px;
+    height: 30px;
+    display: inline-flex;
+	justify-content: center;
+    background-position: 50% 50% !important;
+    background-repeat: no-repeat !important;
+}
+
+.about-us-people__social > span:nth-child(1) {
+    background: url('assets/social/facebook.png');
+}
+
+.about-us-people__social > span:nth-child(2) {
+    background: url('assets/social/google+.png');
+}
+
+.about-us-people__social > span:nth-child(3) {
+    background: url('assets/social/twitter.png');
+}
+
+.about-us-people__social > span:nth-child(4) {
+    background: url('assets/social/linkedin.png');
 }
