--- a/singolo3.css
+++ b/singolo3.css
@@ -33,6 +33,7 @@ body > * {
 .head-content-logo {
 	display: flex;
 	font-family: "latobold";
+	cursor: pointer;
 }
 
 .head-content-logo h1 {
@@ -355,11 +356,20 @@ h2 {
 	padding-bottom: 62px;
 }
 
+.about-us-people__photo img:hover {
+	filter: brightness(1.15);
+	transition: filter 0.5s;
+}
+
 .about-us-people__name {
 	padding-top: 8px;
 	font-family: "latoblack", Helvetica;
 	font-size: 0px;
 	color: #666d89;
+}
+
+.about-us-people__note {
+	padding-bottom: 26px;
 }
 
 .about-us-people__name p:first-line {
@@ -375,22 +385,9 @@ h2 {
     word-spacing: 0.4px;
 }
 
-.about-us-people__social > img {
-	padding: 5px;
-	border: 1px solid #666d89;
-	border-radius: 100%;
-}
 
-.about-us-people__social {
-	margin-top: 26px;
-	cursor: pointer;
-}
 
-.about-us-people:not(:last-child) .about-us-people__social {
-	margin-left: 1px;
-}
-
-.about-us-people__social > span {
+.social > span {
     display: inline-flex;
 	justify-content: center;
     width: 30px;
@@ -400,27 +397,28 @@ h2 {
     border: 1px solid #666d89;
     background-position: 50% 50% !important;
     background-repeat: no-repeat !important;
+	cursor: pointer;
 }
 
-.about-us-people__social > span:hover {
+.social > span:hover {
     border-radius: 25%;
     border: 1px solid #f06c64;
 	transition: border-radius 0.5s, border 0.5s;
 }
 
-.about-us-people__social > span:nth-child(1) {
+.social > span:nth-child(1) {
     background: url('assets/social/facebook.png');
 }
 
-.about-us-people__social > span:nth-child(2) {
+.social > span:nth-child(2) {
     background: url('assets/social/google+.png');
 }
 
-.about-us-people__social > span:nth-child(3) {
+.social > span:nth-child(3) {
     background: url('assets/social/twitter.png');
 }
 
-.about-us-people__social > span:nth-child(4) {
+.social > span:nth-child(4) {
     background: url('assets/social/linkedin.png');
 }
 
@@ -461,7 +459,7 @@ h2 {
 	margin-bottom: 16px;
 	padding: 12px 14px;
 	font-size: 12px;
-	color: #f48c8f;
+	color: #f0d8d9;
 	border: none;
 	border-radius: 6px;
 	background-color: #d6564f;
@@ -498,6 +496,10 @@ h2 {
     line-height: 21px;
 }
 
+.contacts {
+	cursor: pointer;
+}
+
 .contact-icons {
     padding-bottom: 6px;
     letter-spacing: -0.15px;
@@ -523,4 +525,27 @@ h2 {
 
 .contact__mail:before {
 	background-image: url('assets/contacts/03.png');
+}
+
+.footer-wrapper {
+	background-color: #2d303a;
+}
+
+.footer {
+	display: flex;
+	justify-content: space-between;
+	color: #666d89;
+	padding-top: 23px;
+	padding-bottom: 18px;
+	font-size: 12px;
+}
+
+.copyright {
+    padding-top: 6px;
+	word-spacing: -1px;
+}
+
+.footer > .social > span {
+	margin-left: 4.5px;
+	margin-right: 0px;
 }
