--- a/style.css
+++ b/style.css
@@ -357,6 +357,10 @@ h2 {
 	transition: transform 1s;
 }
 
+.portfolio-image_bordered {
+	border: 5px solid #F06C64;
+}
+
 .about-us-wrapper {
 	background-color: #f2f2f2;
 	border-bottom: 6px solid #ffffff;
