--- a/style.css
+++ b/style.css
@@ -597,3 +597,38 @@ h2 {
 	margin-left: 4.5px;
 	margin-right: 0px;
 }
+
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal_closed {
+	display: none;
+}
+
+.modal-window {
+	width: 400px;
+	height: 200px;
+	padding: 10px;
+	background-color: white;
+	border-radius: 10px;
+}
+
+.modal-hide {
+	font-size: 20px;
+	text-align: right;
+	cursor: pointer;
+}
+
+.message-head {
+	font-family: "latobold", Vedana, sans-serif;
+	font-size: 20px;
+}
