--- a/style.css
+++ b/style.css
@@ -623,12 +623,15 @@ h2 {
 }
 
 .modal-hide {
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
+	height: calc(100% - 77px);
 	font-size: 20px;
-	text-align: right;
 	cursor: pointer;
 }
 
 .message-head {
-	font-family: "latobold", Vedana, sans-serif;
+	font-family: "latobold", Verdana, sans-serif;
 	font-size: 20px;
 }
