--- a/style.css
+++ b/style.css
@@ -509,12 +509,14 @@ h2 {
 }
 
 .form-inputs button {
-    padding: 12px 50px;
+	padding: 6.5px 39.8px;
+	font-family: 'latobold', Verdana, sans-serif;
     font-size: 18px;
-    color: #f0d8d9;
-    background-color: #d6564f;
+    color: #886A30;
+    background-color: #FBC65F;
 	border: none;
-    border-radius: 6px;
+	border-radius: 6px;
+	cursor: pointer;
 }
 
 .form-inputs input::placeholder,
@@ -585,7 +587,7 @@ h2 {
 
 .footer {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	color: #666d89;
 	padding-top: 23px;
 	padding-bottom: 18px;
